--- a/.github/workflows/bsvgo.yml
+++ b/.github/workflows/bsvgo.yml
@@ -23,15 +23,15 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             echo "Connection successful"
-            cd /root/www/bsvgo
+            cd www/bsvgo
             pm2 stop ecosystem.config.cjs
             rm -rf node_modules
             rm -rf .next
             echo "remove success"
             git pull origin main
             echo "git pull successfiul"
-            echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
-            echo "set DATABASE_URL"
+            # echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+            # echo "set DATABASE_URL"
             npm install
             npm run build
             pm2 start ecosystem.config.cjs
