--- a/.github/workflows/bsvgo.yml
+++ b/.github/workflows/bsvgo.yml
@@ -6,14 +6,14 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4.0.4
+        uses: actions/setup-node@v4.1.0
         with:
-          node-version: "22"
+          node-version: 22.11.0
 
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
@@ -22,17 +22,32 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
+            # 加载 NVM 环境
+            export NVM_DIR="$HOME/.nvm"
+            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            
+            # 设置 PATH 包含 npm 全局安装的位置
+            export PATH="$PATH:$HOME/.npm-global/bin:/usr/local/bin"
+            
             echo "Connection successful"
             cd www/bsvgo
-            pm2 stop ecosystem.config.cjs
+            
+            # 使用完整路径执行 pm2 命令
+            $(npm bin)/pm2 stop ecosystem.config.cjs || true
+            
             rm -rf node_modules
             rm -rf .next
             echo "remove success"
+            
             git pull origin main
-            echo "git pull successfiul"
-            # echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
-            # echo "set DATABASE_URL"
+            echo "git pull successful"
+            
+            # 安装依赖和构建
             npm install
             npm run build
-            pm2 start ecosystem.config.cjs
+            
+            # 使用完整路径启动 pm2
+            $(npm bin)/pm2 start ecosystem.config.cjs
             echo "pm2 start success"
+            # echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+            # echo "set DATABASE_URL"
