--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,1 @@
-{
-  "extends": ["next/core-web-vitals", "next/typescript"]
-}
+{"extends": ["next/core-web-vitals", "next/typescript"], "rules": {"@next/next/no-img-element": "off", "react-hooks/exhaustive-deps": "off", "@typescript-eslint/no-unused-vars": "warn", "@typescript-eslint/no-explicit-any": "off"}}
