--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,19 @@ services:
   # PostgreSQL 数据库
   postgres:
     image: postgres:16-alpine
-    container_name: bsvgo-postgres-local
+    container_name: bsvgo-postgres
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-bsvgo}
       POSTGRES_USER: ${POSTGRES_USER:-bsvgo}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-your_secure_password}
     volumes:
-      - postgres_local_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     ports:
       - "5432:5432"
     networks:
-      - bsvgo-local-network
+      - bsvgo-network
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-bsvgo} -d ${POSTGRES_DB:-bsvgo}"]
       interval: 30s
@@ -24,13 +25,10 @@ services:
 
 
 
-
-  # Next.js 应用 (本地构建)
+  # Next.js 应用
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: bsvgo-app-local
+    image: ghcr.io/your-username/bsvgo:latest  # 将在 GitHub Actions 中替换
+    container_name: bsvgo-app
     restart: unless-stopped
     environment:
       - NODE_ENV=production
@@ -45,12 +43,36 @@ services:
       postgres:
         condition: service_healthy
     networks:
-      - bsvgo-local-network
+      - bsvgo-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Nginx 反向代理
+  nginx:
+    image: nginx:alpine
+    container_name: bsvgo-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ssl:/etc/nginx/ssl:ro
+      - nginx_logs:/var/log/nginx
+    depends_on:
+      - app
+    networks:
+      - bsvgo-network
 
 volumes:
-  postgres_local_data:
+  postgres_data:
+    driver: local
+  nginx_logs:
     driver: local
 
 networks:
-  bsvgo-local-network:
+  bsvgo-network:
     driver: bridge
