--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:init": "tsx scripts/init-db.ts",
+    "db:seed": "tsx scripts/init-db.ts",
+    "db:reset": "tsx scripts/init-db.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
@@ -59,6 +62,7 @@
     "eslint-config-next": "^15.4.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
