--- a/.github/workflows/bsvgo.yml
+++ b/.github/workflows/bsvgo.yml
@@ -92,14 +92,13 @@ jobs:
             # image-tag 可能会是类似 "ghcr.io/tye-js/bsvgo:main,ghcr.io/tye-js/bsvgo:latest,ghcr.io/tye-js/bsvgo:main-26759ee"
             # 这里我们选择使用 'main' 标签进行部署。如果需要其他标签，请调整 'awk' 的逻辑。
             # 或者，直接将需要的标签作为输出，而不是所有标签。
-            DEPLOY_IMAGE_TAG=$(echo "${{ needs.build-and-push.outputs.image-tag }}" | grep -o 'ghcr.io/tye-js/bsvgo:main') 
-            # 提取 'main' 标签
+            DEPLOY_IMAGE_TAG=$(echo "${{ needs.build-and-push.outputs.image-tag }}" | awk -F',' '{print $1}')
 
             echo "Pulling latest Docker image: ${DEPLOY_IMAGE_TAG}"
             docker pull "${DEPLOY_IMAGE_TAG}"
 
             # 更新 docker-compose.yml 中的镜像标签
-            # 确保替换字符串是单行
+            # sed 命令现在会接收到一个干净的、单一的标签字符串
             sed -i "s|image: .*|image: ${DEPLOY_IMAGE_TAG}|g" docker-compose.yml || true
 
             # 停止现有服务
