--- a/nginx.conf
+++ b/nginx.conf
@@ -12,15 +12,15 @@ http {
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
+    error_log /var/log/nginx/error.log;
 
-    # 基本设置
+    # 基本配置
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
     types_hash_max_size 2048;
-    client_max_body_size 20M;
+    client_max_body_size 50M;
 
     # Gzip 压缩
     gzip on;
@@ -40,136 +40,82 @@ http {
         image/svg+xml;
 
     # 上游服务器
-    upstream nextjs_app {
-        server app:3000 max_fails=3 fail_timeout=30s;
+    upstream nextjs_backend {
+        server app:3000;
     }
 
-    # HTTP 服务器 (临时配置，用于测试)
+    # HTTP 服务器 (重定向到 HTTPS)
     server {
         listen 80;
-        server_name bsvgo.com www.bsvgo.com _;
-
-        # 安全头
-        add_header X-Frame-Options DENY;
-        add_header X-Content-Type-Options nosniff;
-        add_header X-XSS-Protection "1; mode=block";
-        add_header Referrer-Policy "strict-origin-when-cross-origin";
-
-        # 静态文件缓存
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-            proxy_pass http://nextjs_app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        server_name bsvgo.com;
+        
+        # Let's Encrypt 验证
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
         }
-
-        # API 路由
-        location /api/ {
-            proxy_pass http://nextjs_app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-        }
-
-        # 主应用
+        
+        # 重定向到 HTTPS
         location / {
-            proxy_pass http://nextjs_app;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Host $host;
-            proxy_set_header X-Forwarded-Port $server_port;
-
-            # WebSocket 支持
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-        }
-
-        # 健康检查
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
+            return 301 https://$host$request_uri;
         }
     }
 
-    # HTTPS 服务器 (暂时注释，等配置 SSL 证书后启用)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name bsvgo.com www.bsvgo.com;
-    #
-    #     # SSL 配置
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     ssl_session_timeout 1d;
-    #     ssl_session_cache shared:MozTLS:10m;
-    #     ssl_session_tickets off;
-    #
-    #     # 现代 SSL 配置
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #
-    #     # HSTS
-    #     add_header Strict-Transport-Security "max-age=63072000" always;
-    #
-    #     # 安全头
-    #     add_header X-Frame-Options DENY;
-    #     add_header X-Content-Type-Options nosniff;
-    #     add_header X-XSS-Protection "1; mode=block";
-    #     add_header Referrer-Policy "strict-origin-when-cross-origin";
-    #
-    #     # 静态文件缓存
-    #     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-    #         expires 1y;
-    #         add_header Cache-Control "public, immutable";
-    #         proxy_pass http://nextjs_app;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #     }
-    #
-    #     # API 路由
-    #     location /api/ {
-    #         proxy_pass http://nextjs_app;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-Host $host;
-    #         proxy_set_header X-Forwarded-Port $server_port;
-    #     }
-    #
-    #     # 主应用
-    #     location / {
-    #         proxy_pass http://nextjs_app;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Proto $scheme;
-    #         proxy_set_header X-Forwarded-Host $host;
-    #         proxy_set_header X-Forwarded-Port $server_port;
-    #
-    #         # WebSocket 支持
-    #         proxy_http_version 1.1;
-    #         proxy_set_header Upgrade $http_upgrade;
-    #         proxy_set_header Connection "upgrade";
-    #     }
-    #
-    #     # 健康检查
-    #     location /health {
-    #         access_log off;
-    #         return 200 "healthy\n";
-    #         add_header Content-Type text/plain;
-    #     }
-    # }
+    # HTTPS 服务器
+    server {
+        listen 443 ssl http2;
+        server_name bsvgo.com;
+
+        # SSL 配置
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        
+        # SSL 安全配置
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # 安全头
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        # 静态文件缓存
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|txt)$ {
+            proxy_pass http://nextjs_backend;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # Next.js 应用
+        location / {
+            proxy_pass http://nextjs_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            proxy_read_timeout 86400;
+        }
+
+        # API 路由特殊处理
+        location /api/ {
+            proxy_pass http://nextjs_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 300;
+            proxy_connect_timeout 300;
+            proxy_send_timeout 300;
+        }
+    }
 }
