--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
 
   # Next.js 应用
   app:
-    image: ghcr.io/tye-js/bsvgo:main
+    image: ghcr.io/tye-js/bsvgo:latest
     container_name: bsvgo-app
     restart: unless-stopped
     environment:
